style: fix container responsiveness on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,10 @@ body {
   padding: 2rem 1.5rem;
   text-align: center;
   width: 90%;
+
+  @media (max-width: 600px) {
+    width: auto;
+  }
 }
 
 h1 {
@@ -29,7 +33,7 @@ h1 {
 .teams {
   display: flex;
   gap: 1rem;
-  width: 100%;
+  width: calc(100% - 1rem);
 }
 
 @media (min-width: 600px) {
